--- a/src/app/feature/component/auth/auth.component.html
+++ b/src/app/feature/component/auth/auth.component.html
@@ -1,1 +1,16 @@
-<p>auth works!</p>
+<div class="row justify-content-center mt-5">
+    <div class="col-xs-12 col-sm-10 col-md-6 p-5 bg-light">
+      <h1 class="mb-3">Chat Application</h1>
+      <form (ngSubmit)="onSubmit()" #authForm="ngForm">
+        <div class="form-group">
+          <label for="login">Login</label>
+          <input type="text" id="username" name="username" [(ngModel)]="model.username"  class="form-control" autocomplete="off" required  #name="ngModel">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password"  [(ngModel)]="model.password"  class="form-control" required>
+        </div>
+        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">Sign In</button>
+      </form>
+    </div>
+  </div>
