Home component added

--- a/src/app/feature/component/home/home.component.html
+++ b/src/app/feature/component/home/home.component.html
@@ -1,1 +1,36 @@
-<p>home works!</p>
+<div class="row justify-content-center">
+  <h1 class="mb-3">Welcome to Chat Window</h1>
+  <div
+    class="col-md-8 col-lg-6 justify-content-center home__chat-container p-0"
+  >
+    <div class="home__chat-background">
+      <div class="home__footer-container home__footer">
+        <input
+          type="text"
+          #inputcommand
+          class="home__input-text"
+          placeholder="Enter your command"
+        />
+        <div class="btn-group dropup" role="group">
+          <button
+            (click)="command.style.display = 'block'"
+            type="button"
+            class="btn btn btn-dark dropdown-toggle"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Send
+          </button>
+          <div
+            #command
+            class="dropdown-menu dropdown-menu-right"
+          >
+            <a (click)="getMessage()" class="dropdown-item">Message</a>
+            <a (click)="getCommand()" class="dropdown-item">Command</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
