--- a/src/app/feature/component/date/date.component.html
+++ b/src/app/feature/component/date/date.component.html
@@ -1,1 +1,8 @@
-<p>date works!</p>
+<div>Please select the most suitable day for the appointment.</div>
+<div>
+  <button 
+    *ngFor="let day of result"
+    (click)="selectDate(day)"
+    class="btn btn-dark btn-sm mr-2 mt-1">{{day}}</button>
+</div>
+
