--- a/src/app/feature/component/map/map.component.scss
+++ b/src/app/feature/component/map/map.component.scss
@@ -2,7 +2,7 @@
 
     &__container{
     display: block;
-    border: 1px solid red;
+    border: 1px solid  black;
     width: 300px;
     height: 250px;
     }
