--- a/src/app/feature/component/home/home.component.scss
+++ b/src/app/feature/component/home/home.component.scss
@@ -1,11 +1,26 @@
+@import '../../../../styles.scss';
+
 :host .home {
+  &__chat-hdr{
+    color: $sec-color;
+  }
   &__chat-container {
     position: absolute;
     display: flex;
     flex-direction: column;
     top: 50px;
-    height: calc(100% - 109px);
-    background-color: #e5ddd5;
+    width: 100%;
+    height: 80%;
+  }
+
+  &__user-profile{
+    display: flex;
+    position: absolute;
+    right: 20%;
+    flex-direction: column;
+    color: black;
+    top: 2%;
+    text-align: right;
   }
 
   &__chat-background {
@@ -13,12 +28,15 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #f8f9fa;
-    border: 1px solid black;
+    background: $primary-color;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right,$primary-color,$sec-color);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, $primary-color,$sec-color); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    border-style: solid;
+    border: 5px solid $sec-color;
   }
 
   &__footer {
-    background-color: #f5f1ee;
     min-height: 62px;
     -webkit-order: 2;
     order: 2;
@@ -46,6 +64,9 @@
     width: 100%;
     height: 100%;
     padding: 8px;
+    &:focus{
+      outline: none;
+    }
   }
 
   &__chat-component{
