--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+$primary-color: #000000;
+$sec-color:#434343;
+$text-color:#ffffff;
+
+body{
+    color: $text-color;
+}
+
+.btn{
+    border: 1px solid $text-color;
+}
