Added unit test cases for all services

--- a/src/app/feature/component/complete/complete.component.html
+++ b/src/app/feature/component/complete/complete.component.html
@@ -1,7 +1,7 @@
 <div>Are you like to complete the conversation?</div>
 <div>
   <button
-    *ngFor="let opt of completeCommand.data"
+    *ngFor="let opt of completeCommand?.data"
     (click)="selectOption(opt)"
     class="btn btn-dark btn-sm mr-1 mt-1"
   >
